--- a/RestServer/pom.xml
+++ b/RestServer/pom.xml
@@ -45,9 +45,13 @@
 		<dependency>
 			<groupId>javax.annotation</groupId>
 			<artifactId>javax.annotation-api</artifactId>
-			<version>1.3.2</version> <!-- ili odgovarajuću verziju -->
+			<version>1.3.2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java-util</artifactId>
+			<version>3.25.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -63,7 +67,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<mainClass>client.RestClient</mainClass>
+					<mainClass>iot.rest.RestServer.client.RestClient</mainClass>
 				</configuration>
 			</plugin>
 			<plugin>
