--- a/GrpcServer/GrpcServer/appsettings.json
+++ b/GrpcServer/GrpcServer/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Database": "Server=localhost;Port=5432;Database=Internet of things;Username=postgres;password=Veljko22!!!"
+    "Database": "Server=localhost;Port=5433;Database=iot;Username=postgres;password=Veljko22!!!"
   },
   "Kestrel": {
     "EndpointDefaults": {
