--- a/RestServer/pom.xml
+++ b/RestServer/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.2.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>iot.rest</groupId>
+	<groupId>internet.of.things</groupId>
 	<artifactId>RestServer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>RestServer</name>
-	<description>Rest Server</description>
+	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -36,6 +36,12 @@
 			<groupId>io.grpc</groupId>
 			<artifactId>grpc-protobuf</artifactId>
 			<version>1.62.2</version>
+
+		</dependency>
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java-util</artifactId>
+			<version>3.25.3</version>
 		</dependency>
 		<dependency>
 			<groupId>io.grpc</groupId>
@@ -46,11 +52,6 @@
 			<groupId>javax.annotation</groupId>
 			<artifactId>javax.annotation-api</artifactId>
 			<version>1.3.2</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.protobuf</groupId>
-			<artifactId>protobuf-java-util</artifactId>
-			<version>3.25.3</version>
 		</dependency>
 	</dependencies>
 
@@ -66,9 +67,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<mainClass>iot.rest.RestServer.client.RestClient</mainClass>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.xolstice.maven.plugins</groupId>
