--- a/GrpcServer/GrpcServer/Properties/launchSettings.json
+++ b/GrpcServer/GrpcServer/Properties/launchSettings.json
@@ -19,5 +19,14 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
+    ,
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "environmentVariables": {
+        "ASPNETCORE_URLS": "http://+:80"
+      },
+      "publishAllPorts": true
+    }
   }
 }
